src/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: MinecraftRegular;
  src: url(/fonts/MinecraftRegular.otf);
  font-display: swap;
}

@font-face {
  font-family: MinecraftBold;
  src: url(/fonts/MinecraftBold.otf);
  font-display: swap;
}

@font-face {
  font-family: MinecraftItalic;
  src: url(/fonts/MinecraftItalic.otf);
  font-display: swap;
}

@font-face {
  font-family: MinecraftBoldItalic;
  src: url(/fonts/MinecraftBoldItalic.otf);
  font-display: swap;
}

@font-face {
  font-family: MinecraftRus;
  src: url(/fonts/MinecraftRus.ttf);
  font-display: swap;
}

.-animation-delay-5 { animation-delay: -5s; }
.-animation-delay-10 { animation-delay: -10s; }

.animation-delay-100 { animation-delay: 100ms; }
.animation-delay-200 { animation-delay: 200ms; }
.animation-delay-300 { animation-delay: 300ms; }
.animation-delay-400 { animation-delay: 400ms; }
.animation-delay-500 { animation-delay: 500ms; }

html {
  background-color: rgb(9, 11, 13);
}

main {
  overflow: auto;
  height: calc(100lvh - 56px);
  margin-top: 56px;
}

.font-mc {
  font-family: MinecraftRegular, MinecraftRus;
  font-weight: bold;
}

.font-mc-bold {
  font-family: MinecraftBold, MinecraftRus;
  font-weight: bold;
}

.font-mc-italic {
  font-family: MinecraftItalic, MinecraftRus;
  font-style: italic;
}

.font-mc-bold-italic {
  font-family: MinecraftBoldItalic, MinecraftRus;
  font-style: italic;
  font-weight: bold;
}

.strikethrough {
  text-decoration-line: line-through;
}

.underline-strikethrough {
  text-decoration-line: underline line-through;
}

* {
  scroll-behavior: smooth;
  touch-action: manipulation;
  -webkit-tap-highlight-color: transparent;
}

*::-webkit-scrollbar {
  appearance: none;
  -webkit-appearance: none;
  width: 8px;
}
*::-webkit-scrollbar-track {
  background-color: #00000000;
  border-radius: 3px;
}
*::-webkit-scrollbar-thumb {
  background-color: #ffffff20;
  border-radius: 2px;
}

/* NAVBAR TRANSITION */
nav {
  view-transition-name: nav;
}

/* MAIN TRANSITION */
main {
  view-transition-name: root;
}

::view-transition-old(root) {
  animation: 210ms cubic-bezier(0.4, 0, 1, 1) both fade-out,
    600ms cubic-bezier(0.4, 0, 0.2, 1) both slide-to-bottom;
}

::view-transition-new(root) {
  animation: 420ms cubic-bezier(0.4, 0, 0.2, 1) both fade-in,
    600ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-top;
}


@keyframes fade-in {
  from { opacity: 0; }
}

@keyframes fade-out {
  to { opacity: 0; }
}
@keyframes slide-from-top {
  from {
    transform: translateY(30px);
    scale: 0.95;
  }
}
@keyframes slide-to-bottom {
  to {
    transform: translateY(-30px);
    scale: 0.95;
  }
}

.fade-in {
  opacity: 0;
  transform: translateY(-100px);
  animation: fadeInAnimation ease-in-out 800ms;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}

@keyframes fadeInAnimation {
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.Scp {
  display: flex;
  height: 170px !important;
  width: 170px !important;
  padding: 10px !important;
  border-radius: 0.375rem;
  border: hsl(0, 27%, 76%);
  border-width: 1px;
}

